[gd_scene load_steps=6 format=3 uid="uid://dskpdeir1b3uv"]

[ext_resource type="Script" path="res://Objects/Weapons/sniper_rifle.gd" id="1_5e60s"]
[ext_resource type="Texture2D" uid="uid://bla825wrutjbg" path="res://Art/Crosshairs/1.png" id="1_tt4kg"]
[ext_resource type="AudioStream" uid="uid://c5tlt6k45iht2" path="res://Art/SoundFX/514228__superphat__sniper-rifle.wav" id="3_a5qb8"]
[ext_resource type="AudioStream" uid="uid://dqfvh4tyia2xw" path="res://Art/SoundFX/RifleReload.mp3" id="4_v0bqo"]
[ext_resource type="PackedScene" uid="uid://bxhj1sarhwhby" path="res://UI/sniper_rifle_ui.tscn" id="5_ang4k"]

[node name="SniperRifle" type="Node2D"]
script = ExtResource("1_5e60s")

[node name="CrosshairSprite" type="Sprite2D" parent="."]
scale = Vector2(0.40625, 0.40625)
texture = ExtResource("1_tt4kg")

[node name="GunshotSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_a5qb8")

[node name="ReloadSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_v0bqo")
volume_db = 9.0

[node name="SniperRifleUI" parent="." instance=ExtResource("5_ang4k")]
